# IDA-NO-MCP_P4nda0s

./: .gitignore  Cargo.toml  Cargo.toml.dev.example  README.md  build.rs
.github/workflows/: release.yml
oldpython/: INP.py
src/: agents_md.rs  callgraph.rs  config.rs  decompile.rs  func_discover.rs  hexdump.rs  main.rs  metadata.rs  paths.rs  writers.rs
